# krkrsdl3-no-vcpkg

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  README_origin.md  android14_logcat_001.txt  build-android.bat  build-linux.sh  build-windows-msvc.bat  build-windows.bat  vcpkg-configuration.json  vcpkg.json
_testdata/savedata/: data999.ksd  datasc.ksd  datasu.ksd
android/: build.gradle  settings.gradle
android-project/: gradle.properties
android-project/app/: build.gradle  proguard-rules.pro
android/app/: AndroidManifest.xml  build.gradle  proguard-rules.pro
android/gradle/wrapper/: gradle-wrapper.properties
android_adt/jni/: Android.mk
cpp/: eventCallbackFun.h  krkrsdl.cpp  krkrsdl_gl.cpp  krkrsdl_menu.cpp
cpp/core/: CMakeLists.txt
cpp/core/archive/: TARArchive.cpp  TVPArchive.cpp  TVPArchive.h  TVPStorage.cpp  TVPStorage.h  TextStream.cpp  TextStream.h  UtilStreams.cpp  UtilStreams.h  XP3Archive.cpp  XP3Archive.h  ZIPArchive.cpp
cpp/core/main/: NativeEventQueue.cpp  NativeEventQueue.h  SystemControl.cpp  SystemControl.h  TVPApplication.cpp  TVPApplication.h  TVPEvent.cpp  TVPEvent.h  TVPSystem.cpp  TVPSystem.h  TVPThread.cpp  TVPThread.h  TVPWindow.h  WindowIntf.cpp  WindowIntf.h
cpp/core/msg/: Log.cpp  Log.h  TVPDebug.cpp  TVPDebug.h  TVPMsg.cpp  TVPMsg.h  tvp_msg.h  tvp_msg_inc.h
cpp/core/render/: ComplexRect.cpp  ComplexRect.h  DrawDevice.cpp  DrawDevice.h  LayerBitmap.cpp  LayerBitmap.h  LayerManager.cpp  LayerManager.h  LayerTreeOwner.cpp  LayerTreeOwner.h  RenderManager.cpp  RenderManager.h  RenderManagerGL.cpp  RenderManagerGL.h  TVPColor.cpp  TVPColor.h  TransIntf.cpp  TransIntf.h  drawable.h  transhandler.h  tvpinputdefs.h
cpp/core/script/: TVPScript.cpp  TVPScript.h  tjsNativeAsyncTrigger.cpp  tjsNativeAsyncTrigger.h  tjsNativeBasicDrawDevice.cpp  tjsNativeBasicDrawDevice.h  tjsNativeBitmap.cpp  tjsNativeBitmap.h  tjsNativeBitmapLayerTreeOwner.cpp  tjsNativeBitmapLayerTreeOwner.h  tjsNativeCDDASoundBuffer.cpp  tjsNativeCDDASoundBuffer.h  tjsNativeClipboard.cpp  tjsNativeClipboard.h  tjsNativeDebug.cpp  tjsNativeDebug.h  tjsNativeFont.cpp  tjsNativeFont.h  tjsNativeImageFunction.cpp  tjsNativeImageFunction.h  tjsNativeKAGParser.cpp  tjsNativeKAGParser.h  tjsNativeLayer.cpp  tjsNativeLayer.h  tjsNativeMIDISoundBuffer.cpp  tjsNativeMIDISoundBuffer.h  tjsNativeMenuItem.cpp  tjsNativeMenuItem.h  tjsNativePad.cpp  tjsNativePad.h  tjsNativePhaseVocoder.cpp  tjsNativePhaseVocoder.h  tjsNativePlugins.cpp  tjsNativePlugins.h  tjsNativeRect.cpp  tjsNativeRect.h  tjsNativeScript.cpp  tjsNativeScript.h  tjsNativeStorages.cpp  tjsNativeStorages.h  (+10 more)
cpp/core/tjs2/: tjs.cpp  tjs.h  tjs.tab.cpp  tjsArray.cpp  tjsArray.h  tjsBinarySerializer.cpp  tjsBinarySerializer.h  tjsByteCodeLoader.cpp  tjsByteCodeLoader.h  tjsCommHead.h  tjsCompileControl.cpp  tjsCompileControl.h  tjsConfig.cpp  tjsConfig.h  tjsConstArrayData.cpp  tjsConstArrayData.h  tjsDate.cpp  tjsDate.h  tjsDateParser.cpp  tjsDateParser.h  tjsDateWordMap.cc  tjsDebug.cpp  tjsDebug.h  tjsDictionary.cpp  tjsDictionary.h  tjsDisassemble.cpp  tjsError.cpp  tjsError.h  tjsErrorDefs.h  tjsErrorInc.h  tjsError_jp.h  tjsException.cpp  tjsException.h  tjsGlobalStringMap.cpp  tjsGlobalStringMap.h  tjsHashSearch.h  tjsInterCodeExec.cpp  tjsInterCodeExec.h  tjsInterCodeGen.cpp  tjsInterCodeGen.h  (+39 more)
cpp/core/utils/: Exception.h  FilePathUtil.h  ObjectList.h  PhaseVocoderDSP.cpp  PhaseVocoderDSP.h  Random.cpp  Random.h  RealFFT.cpp  RealFFT.h  ResampleImage.cpp  ResampleImage.h  ResampleImageInternal.h  RingBuffer.h  StringUtil.h  TVPTimer.cpp  TVPTimer.h  TickCount.cpp  TickCount.h  VelocityTracker.cpp  VelocityTracker.h  WeightFunctor.cpp  WeightFunctor.h  aligned_allocator.h
cpp/environ/: CMakeLists.txt  DetectCPU.cpp  DetectCPU.h  KeyCodeConv.cpp  KeyCodeConv.h  MainWindowLayer.cpp  MainWindowLayer.h  Other.cpp  Platform.h  TVPConfig.cpp  TVPConfig.h  TVPScreen.h  WaveMixer.cpp  WaveMixer.h
cpp/environ/android/: Platform.cpp
cpp/environ/linux/: Platform.cpp
cpp/environ/windows/: Platform.cpp
cpp/plugins/: AlphaMovie.cpp  CMakeLists.txt  DrawDeviceD3D.cpp  Extension.cpp  Extension.h  FuncStubs.cpp  FuncStubs.h  LayerExAreaAverage.cpp  LayerExBTOA.cpp  LayerExBase.cpp  LayerExBase.h  LayerExBase.hpp  LayerExImage.cpp  LayerExImage.h  LayerExMovie.cpp  LayerExPerspective.cpp  LayerExRaster.cpp  PackinOne.cpp  TVPPlugin.cpp  TVPPlugin.h  addFont.cpp  csvParser.cpp  dirlist.cpp  expat.cpp  fftgraph.cpp  fstat.cpp  getSample.cpp  getabout.cpp  gfxEffect.cpp  json.cpp  kirikiroid2.cpp  motionPlayer.cpp  saveStruct.cpp  scriptsEx.cpp  shrinkCopy.cpp  textrender.cpp  varfile.cpp  win32dialog.cpp  windowEx.cpp  wutcwf.cpp  (+2 more)
cpp/plugins/ExtKAGParser/: ExtKAG.cpp  ExtKAGParser.cpp  ExtKAGParser.hpp  ExttjsHashSearch.h  TJSAry.cpp  TJSAry.h  TJSDic.cpp  TJSDic.h
cpp/plugins/KAGParserEx/: KAG.cpp  KAGParserEx.cpp  KAGParserEx.hpp  tjsHashSearchEX.h
cpp/plugins/LayerExDraw/: DrawBackend.h  LayerExDraw.cpp  LayerExDraw.hpp
cpp/plugins/emoteplayer/: emotefile.cpp  emotefile.h  emoteplayer.cpp  emoteplayerclass.cpp  emoteplayerclass.h  emoterunner.cpp  emoterunner.h
cpp/plugins/extrans/: common.h  extrans.cpp  mosaic.cpp  ripple.cpp  ripple.h  rotatebase.cpp  rotatebase.h  rotatetrans.cpp  turn.cpp  turntrans_table.cpp  turntrans_table.h  wave.cpp
cpp/plugins/ncbind/: ncb_foreach.h  ncb_invoke.hpp  ncbind.cpp  ncbind.hpp
cpp/plugins/psbfile/: PSB.cpp  PSBData.cpp  PSBData.h  PSBFile.cpp  PSBFile.h  PSBMedia.cpp  PSBMedia.h
cpp/plugins/sqlite3/: extend.cpp  sqlite3.cpp  (+2 more)
vcpkg/triplets/: android-dynamic-libs.cmake  arm-android.cmake  arm64-android.cmake  x64-android.cmake
(+124 files in other folders)
